--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
                     <p>Você merece realizar seu sonho de ter um carro. Pense nas inúmeras possibilidades que um carro pode oferecer: liberdade para ir e vir, comodidade para transportar as coisas que você precisa, e a sensação de conquista e realização.</p>
                     <p>Com planejamento financeiro adequado e pesquisa de mercado, você pode encontrar a opção de carro perfeita para seu orçamento e necessidades. </p>
-                    <p>Não deixe mais o medo ou dúvida te impedir de alcançar essa meta. Faça a escolha certa e dê o primeiro passo para realizar seu sonho de ter um carro.</p>
-                    <p> Faça a escolha certa e dê o primeiro passo para realizar seu sonho de ter um carro.</p>
+                    <p>Não deixe mais o medo ou dúvida te impedir de alcançar essa meta.
+                        <p> Faça a escolha certa e dê o primeiro passo para realizar seu sonho de ter um carro.</p>
                 </div>
             </section>
 
