--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Henrique Jardim">
-    <meta name="description" content="Concessionária Conselheiro Lafaiete AT">
+    <meta name="description" content="Concessionária Conselheiro Lafaiete ATD Veiculos">
     <meta name="referrer" content="origin">
     <!-- Copyright Semântico -->
-    <meta name="copyright" content="© 2023 AT Automóveis">
+    <meta name="copyright" content="© 2023 AT Veiculos">
     <!-- Fb Property-->
     <meta property="og:locale" content="pt_BR">
     <meta property="og:url" content="https://linkdosite.com.br/">
     <meta property="og:title" content="AT Automóveis 2023 ©">
-    <meta property="og:description" content="Concessionária AT Conselheiro Lafaiete MG ">
+    <meta property="og:description" content="Concessionária ATD Veiculos Conselheiro Lafaiete MG ">
     <meta property="og:type" content="website">
     <!-- CANONICAL TAG = RANKEAMENTO MELHOR-->
     <link rel="canonical" href="https://linkdosite/">
@@ -27,7 +27,7 @@
     <script src="https://connect.facebook.net/signals/plugins/identity.js?v=2.9.94" async=""></script> 
     FIM  DA INCORPORACAO -->
 
-    <title>AT Automóveis </title>
+    <title>ATD Veículos &copy; </title>
 
 
     <link rel="stylesheet" href="./css/styles.css">
@@ -42,7 +42,7 @@
               </svg>
         </button>
         <div class="logo-header">
-            <img src="./images/logo2.png" class="img-logo-header" alt="Logo AT Automóveis">
+            <img src="./images/logo2.png" class="img-logo-header" alt="Logo ATD Veiculos">
         </div>
         <div class="navigation-header">
             <button onclick="toggleSidebar()" class="botao-header">
@@ -50,8 +50,8 @@
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                   </svg>
             </button>
-            <a class="active" href="">Orçamentos</a>
-            <a class="active" href="">Localização</a>
+            <a class="active" href="https://api.whatsapp.com/send?phone=5531998614876&text=Ol%C3%A1,%20boa%20tarde.%20%0AGostaria%20de%20fazer%20um%20or%C3%A7amento%20com%20voc%C3%AAs." target="_blank">Orçamentos</a>
+            <a class="active" href="https://goo.gl/maps/kyJheodX2Pb5rgrx5" target="_blank">Localização</a>
             <a class="active" href="#contato">Contato</a>
         </div>
     </div>
@@ -65,7 +65,7 @@
 
             <section class="module content2">
                 <div class="container-2">
-                    <h2>E nós viemos juntos..</h2>
+                    <h2>E nós, da ATD Veículos, <br> viemos juntos..</h2>
                     <p>
                         <h3>É um prazer conhecê-los.
 
@@ -76,7 +76,7 @@
             </section>
 
             <section class="module parallax parallax-2">
-                <h1 class="titulo-loja"> André Dias Automóveis </h1>
+                <h1 class="titulo-loja"> ATD Veículos </h1>
             </section>
 
             <section class="module content2">
@@ -97,7 +97,7 @@
 
             <section class="module parallax parallax-3">
                 <h2>
-                    <a href="https://wa.me/5531998614876?text=Ol%C3%A1,%20vim%20por%20meio%20do%20site%20de%20voc%C3%AAs%20e%20gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os!%20"> Garanta o seu!           
+                    <a href="https://wa.me/5531998614876?text=Ol%C3%A1,%20vim%20por%20meio%20do%20site%20de%20voc%C3%AAs%20e%20gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os!%20" target="_blank"> Garanta o seu!           
                     </a>
                 </h2>
             </section>
